# haki-data

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
haki_data/: __init__.py  analysis.py  cleaner.py  constants.py  dcrt_processor.py  hc_helper.py  logging_config.py  main.py  preprocessor.py  utils.py
haki_data/v1/: court-data-processor.py  dcrt-api.py  dcrt_processor.py  refactored_dcrt_processor.py  unified.py  updated-court-data-processor.py  utils.py
notebooks/analysis/: analysis_notebook.ipynb  coa-reporting.ipynb  coa-reporting_orig.ipynb  coa_bench_analysis.ipynb  coa_data_analysis.ipynb  evaluation.ipynb  judgement.ipynb  judgement_analysis.ipynb  judgements.ipynb  notebook.ipynb  pmmu.ipynb  reporting.ipynb  reporting_orig.ipynb
notebooks/extractor/: api_data_processor.ipynb  api_data_reader.ipynb  coa_api_dataprocessor.ipynb  coa_api_dataprocessor_1.ipynb  combined.ipynb  combined_2.ipynb  dcrt_excel_reader.ipynb  tribunal_api_data_processor.ipynb
notebooks/visualization/: adhoc.ipynb  visuals.ipynb
