[tool.poetry]
name = "haki-data"
version = "0.1.0"
description = "A tool for analyzing court case data"
authors = ["namatanda <mwagichimu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
jupytext = "^1.16.6"
rapidfuzz = "^3.12.1"
matplotlib = "^3.10.0"
nbstripout = "^0.8.1"
pre-commit = "^4.1.0"
seaborn = "^0.13.2"
squarify = "^0.4.4"
jinja2 = "^3.1.5"
dataframe-image = "^0.2.7"
pre-commit-hooks = "^5.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^6.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
haki-data = "haki_data.__main__:main"
